--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,121 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+*{
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
+.div-container{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: #e1ce8a;
+}
 
+.div-header{
+  border-radius: 1rem;
+  width: 95vw;
+  margin-top: .5rem;
+  height: 25vh;
+  background-image: url(../src/assets/img/ilus01.png);
+  background-size: cover;
+  background-position: center;
+  box-shadow: 2px 2px 5px gray;
+}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.list-container{
+  background-image: url(../src/assets/img/ilus02.png);
+  background-size: cover;
+  background-position: center;
+  border-radius: 1rem;
+  width: 92vw;
+  height: 70vh;
+  margin-bottom: 1rem;
+  box-shadow: 2px 2px 5px gray;
+
+}
+
+.div-title{
+  height: 7vh;
+  border-radius: .5rem;
+  margin-bottom: 2rem;
+  margin-top: .7rem;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  h1{
+    font-size: 2.8rem;
+    color: white;
+    text-shadow: 2px 2px 5px gray;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+.div-update{
+  font-size: .7rem;
+  text-transform: uppercase;
+   color: white;
+  background-color: rgb(255, 113, 93);
+  border-radius: .9rem .9rem 0rem 0rem;
+  margin: .1rem;
+}
+
+.inf-text{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ button{
+  background: transparent;
+    width: 5rem;
+    height: 4rem;
+  }
+.div-container-search{
+  width: 80vw;
+  margin: auto;
+  display: flex;
+  border-radius: .5rem;
+  border: .1rem solid gray;
+  height: 2rem;
+  gap: .5rem;
+  background-color: rgba(255, 255, 255, 0.781);
+  svg{
+    margin-left: .5rem;
+    margin-top: .3rem;
+    fill: black;
+  }
+}
+.input-search{
+  border: none;
+  text-align: left;
+  background-color: transparent;
+  font-weight: 500;
+}
+.input-search:focus{
+  outline: none;
+  border: none;
+  /* border: 1px solid #4A90E2;  */
+  /* color: #4A90E2; */
+}
+
+
+
+@media screen and (min-width: 700px) {
+  .input-search{
+    width: 60vw;
   }
 }
 
