--- a/src/App.css
+++ b/src/App.css
@@ -30,29 +30,67 @@
   background-position: center;
   border-radius: 1rem;
   width: 92vw;
-  height: 50vh;
+  height: 70vh;
   overflow-x: hidden;
   margin-bottom: 1rem;
   box-shadow: 2px 2px 5px gray;
 }
 
 .card-medicines{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: auto;
   margin-top: .1rem;
-  /* background-color: tomato; */
   background: rgba(255, 255, 255, 0.30);
   backdrop-filter: blur(8.8px);
   -webkit-backdrop-filter: blur(8.8px);
   width: 85vw;
   height: 2rem;
   border-radius: 1rem 1rem 0.5rem 0.5rem;
+  overflow: hidden;
+
+
 }
 .card-medicines:hover {
-  background: rgba(255, 255, 255, 0.70);
+  background: rgba(255, 255, 255, 0.30);
   width: 85vw;
   transition: 0.5s;
-  height: 6rem;
+  height: 15rem;
   border-radius: 1rem 1rem 0.5rem 0.5rem;
+
+  .name{
+    font-weight: 700;
+  }
+}
+
+.inf-medicines{
+  overflow: hidden;
+  background: rgba(255, 255, 255, .5);
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem 1rem 0rem 0rem;
+  box-shadow: inset rgba(9, 30, 66, 0.08) 0px 0px 0px 1px, inset rgba(9, 30, 66, 0.25) 0px 4px 8px -2px;
+  text-transform: uppercase;
+}
+
+.div-list{
+  padding-bottom: 10rem;
+}
+.inf-detal{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  p{
+    width: 7rem;
+    text-align: left;
+  }
+}
+
+p.name {
+  margin-bottom: 1rem;
+  text-transform: capitalize;
 }
 
 .div-title {
@@ -188,17 +226,23 @@
   width: 80vw;
   margin: auto;
   display: flex;
-  border-radius: .5rem;
-  border: .1rem solid gray;
+  border-radius: 1rem 1rem 0.5rem 0.5rem;
+  border: none;
   height: 2rem;
   gap: .5rem;
-  background-color: rgba(255, 255, 255, 0.781);
+  background-color: rgba(255, 255, 255, 0.767);
 
   svg {
     margin-left: .5rem;
     margin-top: .3rem;
     fill: black;
   }
+}
+
+.div-container-search:hover {
+  width: 85vw;
+  background-color: rgba(255, 255, 255, 1);
+  transition: 0.5s;
 }
 
 .input-search {
@@ -218,7 +262,4 @@
 
 
 @media screen and (min-width: 700px) {
-  .input-search {
-    width: 60vw;
-  }
 }
