--- a/src/App.css
+++ b/src/App.css
@@ -124,9 +124,36 @@ p.name {
   display: flex;
   justify-content: center;
   align-items: center;
-
   width: 100%;
   margin: 1rem;
+}
+
+.span-info{
+  position: absolute;
+  bottom: 1.5rem;
+  right: 1.5rem;
+  background-color: rgba(255, 255, 255, .5);
+  border-radius: 50%;
+  width: 2.5rem;
+  height: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &:hover{
+    background-color: black;
+     svg {
+      fill: black;
+      width: 100%;
+      height: 100%;
+      transition: .3s;
+
+    &:hover {
+      fill: orange;
+    }
+  }
+  }
+ 
 }
 
 .text-h3{
