--- a/src/App.css
+++ b/src/App.css
@@ -128,7 +128,7 @@ p.name {
   margin: 1rem;
 }
 
-.span-info{
+.false-span-info{
   position: absolute;
   bottom: 1.5rem;
   right: 1.5rem;
@@ -153,8 +153,53 @@ p.name {
     }
   }
   }
- 
 }
+
+.true-span-info{
+  display: none;
+}
+
+.span-info{
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+  background-color: rgba(255, 255, 255, .2);
+  border-radius: 50%;
+  width: 2.5rem;
+  height: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &:hover{
+    background-color: black;
+     svg {
+      fill: black;
+      width: 100%;
+      height: 100%;
+      transition: .3s;
+
+    &:hover {
+      fill: orange;
+    }
+  }
+  }
+}
+
+ul{
+  position: absolute;
+  right: 0;
+  height: 100vh;
+  width: 100%;
+  background-color:  rgba(255, 255, 255, .7);
+  transform: translateX(100%);
+  transition: .3s;
+}
+
+.active{
+  transform: translateX(0);
+}
+
 
 .text-h3{
   width: 70%;
